<resources>
    <string name="app_name">sign</string>
    <string name="sign_app_name">sign life</string>
    <string name="online_config">OnlineConfig</string>
    <string name="make_crash">Make me crash!!</string>
    <string name="kv_event">K-V Event</string>
    <string name="normal_event">Event</string>
    <string name="event_begin">Event Begin</string>
    <string name="event_end">Event End</string>
    <string name="event_duration">Value-Type</string>
    <string name="page_stack">Page in Fragment Stack</string>
    <string name="page_tabs">Page in Fragment Tabs</string>
    <string name="social_analytics">Social Analytics</string>
    <string name="js_in_webview">JS Analytics in Webivew</string>
    <string name="flush_cache">send cache message ,right now !</string>
    <string name="signin">signin</string>
    <string name="saoyisao">扫一扫</string>
    <string name="sign_text_detail">生活小功能</string>
    <string name="signoff">signoff</string>
    <string name="sign_name">签名</string>
    <string name="update_hint">系统提示:有新版本发布,请点击确定安装！</string>
    <string name="login_account">账号:</string>
    <string name="login_password">密码:</string>
    <string name="login_login">登        录</string>
    <string name="login_char">登 录</string>
    <string name="login_checkupdate">检测更新</string>
    <string name="main_pkgchange">PKG转换</string>
    <string name="main_orderbulu">订单补录</string>
    <string name="main_listsaomiao">清单扫描</string>
    <string name="main_taskyun">任务转运</string>
    <string name="zhongzhuansaomiao">中转扫描</string>
    <string name="main_changgereceive">下车签收</string>
    <string name="main_changgesaomiao">内部扫描</string>
    <string name="fucntion_out_transport">移交渠道</string>
    <string name="login_inputaccount">请输入用户名/邮箱/手机</string>
    <string name="login_inputpass">请输入密码</string>
    <string name="title_activity_function">FunctionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="please_wait">Loading…</string>
    <string name="select_order">请选择你需要出库的订单号</string>
    <string name="selectbatch">当前路由设置有多个，请您选择当前需要去的目的地！</string>
    <string name="return_previous_menu">再按一次返回上级菜单</string>
    <string name="download_apk_url">http://rpswebapi.flytcloud.com/FlytApk/FlytExpress.apk</string>
    <!-- <string name="download_apk_url">http://192.168.5.28:8086/FlytApk/FlytExpress.apk</string> -->
    <string name="apk_name">FlytExpress.apk</string>
    <string name="outLibrary">订单出库</string>
    <string name="order_operate">订单操作</string>
    <string name="orderbulu_order">订单补录</string>
    <string name="qingdansaomiao">清单扫描</string>
    <string name="zhuanyunsaomiao">内部中转</string>
    <string name="zhuanyunqianshou">下车签收</string>
    <string name="renwuzhuanyun">任务签收</string>
    <string name="pkgzhuanhuan">PKG转换</string>
    <string name="xitongceshi">系统测试</string>
    <string name="title_activity_order_delivery">OrderDeliveryActivity</string>
    <string name="title_activity_order_operate">OrderOperateActivity</string>
    <string name="title_activity_order_make_up">OrderMakeUpActivity</string>
    <string name="title_activity_list_scan">ListScanActivity</string>
    <string name="title_activity_task_receive">TaskReceiveActivity</string>
    <string name="title_activity_transport_receive">TransportReceiveActivity</string>
    <string name="title_activity_transport_scan">TransportScanActivity</string>
    <string name="title_activity_pkgchange">PKGChangeActivity</string>
    <string name="title_activity_system_test">SystemTestActivity</string>
    <string name="title_activity_transfer_scan">TransferScanActivity</string>
    <string name="title_textview_receive">签名中心</string>
    <string name="tv_null"></string>
    <string name="back">Go Back</string>
    <string name="ok">ok</string>
    <string name="login_faile">你输入的账号或者密码有误，请重新输入</string>
    <string name="net_connect_failed">网络连接失败</string>
    <string name="login_account_failed">请输入账号</string>
    <string name="login_password_failed">请输入密码</string>
    <string name="main_rb_category">账户</string>
    <string name="main_rb_home">首页</string>
    <string name="main_rb_linliRoll">更多</string>
    <string name="input_scan_edit">请输入或者扫描包裹号</string>
    <string name="posttype">邮递方式：</string>
    <string name="total_weight">总件数：</string>
    <string name="deliver_weight">出发地重量：</string>
    <string name="detail_total_weight">明细总重量：</string>
    <string name="summit">提交</string>
    <string name="summit_image">签名提交</string>
    <string name="scan_count">已签收件数：</string>
    <string name="see_image">查看签名</string>
    <string name="tint_friendly">温馨提示：在屏幕上写入自己的签名即可</string>
    <string name="tv_title">欢迎来到飞特物流</string>
    <string name="dialog_title">系统提示</string>
    <string name="dialog_content">你确定退出吗？</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
</resources>
